// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render borderBottom 1`] = `
<div
  class="wp-components-surface css-nmnysc"
  data-g2-c16t="true"
  data-g2-component="Surface"
>
  Some people are worth melting for.
</div>
`;

exports[`props should render borderLeft 1`] = `
<div
  class="wp-components-surface css-v4l0wt"
  data-g2-c16t="true"
  data-g2-component="Surface"
>
  Some people are worth melting for.
</div>
`;

exports[`props should render borderRight 1`] = `
<div
  class="wp-components-surface css-10rsllr"
  data-g2-c16t="true"
  data-g2-component="Surface"
>
  Some people are worth melting for.
</div>
`;

exports[`props should render borderTop 1`] = `
<div
  class="wp-components-surface css-iiuivz"
  data-g2-c16t="true"
  data-g2-component="Surface"
>
  Some people are worth melting for.
</div>
`;

exports[`props should render borders 1`] = `
<div
  class="wp-components-surface css-1s90agt"
  data-g2-c16t="true"
  data-g2-component="Surface"
>
  Some people are worth melting for.
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-surface css-143byaq"
  data-g2-c16t="true"
  data-g2-component="Surface"
>
  Some people are worth melting for.
</div>
`;

exports[`props should render variants 1`] = `
<div
  class="wp-components-surface css-1ggy2of"
  data-g2-c16t="true"
  data-g2-component="Surface"
>
  Some people are worth melting for.
</div>
`;
